--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -77,12 +77,15 @@
         "clean_photo": "تنظيف الصورة"
     },
     "premium": {
-        "title": "احصل على المزيد مع Premium",
-        "subtitle": "انتقل بمشاريعك إلى مستوى أبعد باستخدام أدوات متميزة تعمل بذكاء ولا تعيق طريقك. أنشئ بلا حدود أو إعلانات أو عوائق. ابدأ مقابل 3.99 دولار فقط شهرياً.",
+        "title": "أدوات مجانية وأخلاقية تمامًا",
+        "subtitle": "تطبيقنا مجاني تمامًا بدون تكاليف خفية. نحن لا نتتبع بياناتك، ولا نستخدم أنماطًا مظلمة، ونحن مفتوحي المصدر بالكامل. استمتع باستخدام غير محدود مع معالجة أسرع، مع احترام خصوصيتك. مصمم للمتعة—نحن لا نتحمل أي مسؤولية قانونية عن الاستخدام.",
+        "no_tracking": "بدون تتبع",
+        "open_source": "مفتوح المصدر",
+        "no_dark_patterns": "بدون أنماط مظلمة",
         "ad_free": "بدون إعلانات",
         "unlimited": "استخدام غير محدود",
         "faster": "معالجة أسرع",
-        "cta": "ابدأ الآن"
+        "cta": "ابدأ"
     },
     "search": {
         "placeholder": "البحث عن الأدوات..."
