--- a/src/locales/hi/translation.json
+++ b/src/locales/hi/translation.json
@@ -77,9 +77,12 @@
         "clean_photo": "फोटो साफ करें"
     },
     "premium": {
-        "title": "प्रीमियम के साथ और अधिक प्राप्त करें",
-        "subtitle": "प्रीमियम टूल्स के साथ अपने प्रोजेक्ट्स को आगे बढ़ाएं जो आपके रास्ते में नहीं आते और स्मार्ट तरीके से काम करते हैं। बिना किसी सीमा, विज्ञापन या बाधा के बनाएं। बस $3.99 प्रति माह में शुरू करें।",
-        "ad_free": "विज्ञापन मुक्त",
+        "title": "पूरी तरह से मुफ्त और नैतिक उपकरण",
+        "subtitle": "हमारी ऐप बिना किसी छिपी लागत के पूरी तरह से मुफ्त है। हम आपके डेटा को ट्रैक नहीं करते, कोई डार्क पैटर्न नहीं इस्तेमाल करते, और पूरी तरह से ओपन-सोर्स हैं। तेजी से प्रोसेसिंग के साथ असीमित उपयोग का आनंद लें, आपकी गोपनीयता का सम्मान करते हुए। मनोरंजन के लिए बनाया गया—हम उपयोग की कोई कानूनी जिम्मेदारी नहीं लेते।",
+        "no_tracking": "कोई ट्रैकिंग नहीं",
+        "open_source": "ओपन सोर्स",
+        "no_dark_patterns": "कोई डार्क पैटर्न नहीं",
+        "ad_free": "विज्ञापन-मुक्त",
         "unlimited": "असीमित उपयोग",
         "faster": "तेज़ प्रोसेसिंग",
         "cta": "शुरू करें"
