--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -11,7 +11,9 @@
         "image": "أدوات الصور",
         "ai": "أدوات الذكاء الاصطناعي",
         "coding": "أدوات البرمجة",
-        "misc": "أدوات متنوعة"
+        "misc": "أدوات متنوعة",
+        "about_me": "عني",
+        "portfolio": "ملف الأعمال"
     },
     "tools": {
         "pdf": "أدوات PDF",
@@ -458,6 +460,10 @@
         "aes-encrypt": {
             "name": "تشفير AES",
             "desc": "تشفير وفك تشفير النص باستخدام AES"
+        },
+        "portfolio": {
+            "name": "ملف الأعمال / عني",
+            "desc": "خبرتي العملية ومهاراتي"
         }
     }
 }
