--- a/src/locales/hi/translation.json
+++ b/src/locales/hi/translation.json
@@ -10,8 +10,10 @@
         "pdf": "पीडीएफ टूल्स",
         "image": "इमेज टूल्स",
         "ai": "एआई टूल्स",
-        "coding": "कोडिंग टूल्स",
-        "misc": "अन्य टूल्स"
+        "coding": "कोडिंग उपकरण",
+        "misc": "विविध उपकरण",
+        "about_me": "मेरे बारे में",
+        "portfolio": "पोर्टफोलियो"
     },
     "tools": {
         "pdf": "पीडीएफ टूल्स",
@@ -458,6 +460,10 @@
         "aes-encrypt": {
             "name": "एईएस एन्क्रिप्शन",
             "desc": "एईएस का उपयोग करके टेक्स्ट को एन्क्रिप्ट और डिक्रिप्ट करें"
+        },
+        "portfolio": {
+            "name": "पोर्टफोलियो / मेरे बारे में",
+            "desc": "मेरा कार्य अनुभव और कौशल"
         }
     }
 }
